# myMoE

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml
configs/: adaptive-evaluation-contract.example.json  app.browser.example.json  app.desktop.example.json  app.json  app.mcp-enabled.local.example.json  assistant-bridge-workflow.example.json  assistant-bridge.json  cell-binding-request.example.json  context-policy.json  cron.json  local-cascade-moe.example.json  local-cascade.example.json  mcp.cua-desktop.example.json  mcp.filesystem.enabled.example.json  mcp.json  mcp.playwright-browser.example.json  model-benchmark.json  model-candidates.json  moe.live.fast-mlx.example.json  moe.live.gemma-12b-agentic-gguf.example.json  moe.live.gemma-12b-coder-gguf.example.json  moe.live.gemma-e4b-mlx.example.json  moe.live.general-mlx.example.json  moe.live.ollama.example.json  moe.live.qwen25-coder.json  moe.live.qwen3-coder-mlx.example.json  moe.live.qwen30-mlx.example.json  moe.local.example.json  moe.mesh-private.example.json  moe.mock.json  moe.process-bound-runtime.example.json  quality-benchmark.json  quality-gate-ci.json  quality-gate.json  runtime-supervisor-policy.example.json  single.live.qwen25-coder.json  speculative-cell-plan.example.json  tools.json  verified-routing-policy.example.json  verified-routing-promotion.example.json  (+1 more)
docs/: README.md  adaptive-cell-advisor.md  agent-runtime.md  architecture.md  bound-cell-run.md  browser-capability-cell.md  cell-execution-gate.md  cell-runtime-binding.md  ci.md  context-architecture.md  cooperative-resource-lease.md  desktop-semantic-cell.md  distillation-plan.md  evaluation.md  execution-scopes.md  gemma-e4b-runtime.md  github-actions-ci.yml  hybrid-assistant-bridge.md  installation.md  local-cascade.md  local-coding-fabric.md  model-selection.md  performance-benchmarking.md  plan.md  process-bound-runtime-supervisor.md  router.md  speculative-cell-qualifier.md  tested-performance.md  ui.md  verified-outcome-routing.md
experiments/: benchmark_adaptive_cell_advisor.py  benchmark_bound_cell_run.py  benchmark_cell_execution_gate.py  benchmark_cooperative_resource_lease.py  benchmark_desktop_semantic.py  benchmark_local_cascade.py  benchmark_models.py  benchmark_process_bound_runtime.py  benchmark_runtime_binding.py  benchmark_speculative_cell_qualifier.py  build_route_label_dataset.py  build_route_scorecard.py  derive_route_signals.py  eval_set.jsonl  eval_set_extended.jsonl  eval_set_live_general.jsonl  eval_set_live_general_holdout_v2.jsonl  eval_set_live_general_holdout_v3.jsonl  eval_set_live_general_holdout_v4.jsonl  eval_set_live_general_holdout_v5.jsonl  eval_verified_routing.py  freeze_verified_routing_plan.py  qualify_verified_routing.py  quality_benchmark_cases.jsonl  recommend_verified_route.py  record_verified_outcome.py  route_labels_extended.jsonl  route_labels_live_general.jsonl  run_live_eval.py  run_quality_benchmark.py  run_quality_gate.py  run_smoke_eval.py  runtime_supervisor_fakes.py  (+2 more)
(+354 files in other folders)
