[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-moe-orchestrator"
version = "0.1.0"
description = "Local-first system-level MoE orchestration prototype"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
gguf = [
  "huggingface-hub",
  "psutil"
]
mlx = [
  "mlx==0.31.2",
  "mlx-metal==0.31.2; platform_system == 'Darwin'",
  "mlx-lm==0.31.3",
  "transformers==5.12.1",
  "huggingface-hub",
  "psutil"
]
mlx-current = [
  "mlx-lm",
  "huggingface-hub",
  "psutil"
]
mlx-vlm = [
  "mlx-vlm",
  "huggingface-hub",
  "psutil"
]
ui-test = [
  "playwright"
]

[project.scripts]
mymoe = "local_moe.cli:main"
mymoe-web = "local_moe.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
