[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "local-moe-orchestrator"
version = "0.1.0"
description = "Local-first system-level MoE orchestration prototype"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
assistant-bridge = [
  "detect-secrets>=1.5,<1.6",
  "psutil>=7.2.2,<8"
]
gguf = [
  "huggingface-hub",
  "psutil"
]
mlx = [
  "mlx==0.31.2",
  "mlx-metal==0.31.2; platform_system == 'Darwin'",
  "mlx-lm==0.31.3",
  "transformers==5.12.1",
  "huggingface-hub",
  "psutil"
]
mlx-current = [
  "mlx-lm",
  "huggingface-hub",
  "psutil"
]
mlx-vlm = [
  "mlx-vlm",
  "huggingface-hub",
  "psutil"
]
ui-test = [
  "playwright"
]

[project.scripts]
mymoe = "local_moe.cli:main"
mymoe-web = "local_moe.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
